--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.flex {
+  display: flex;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+p {
+  font-weight: bold;
+}
+
+input {
+  height: 50%;
+  margin: auto 5px;
+}
+
+select {
+  width: auto;
+  height: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 5px;
 }
